Structure fixed All backgrounds are in place
Some content is kinda messed up

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -9,21 +9,36 @@ body{
 	//background-color: black;
 }
 
+
 .content{
-	//border: 2px dotted red;
+	//border: 5px dotted red;
 	position: relative;
 	margin: 0 auto;
 	max-width: 2000px;
+	min-width: 920px;
 	//height: 3000px;
 	box-shadow: 0 0 500px black;
 }
 
+
+
+
+
+
 .header{
 	position: relative;
-	box-sizing: border-box;
-	min-width: 920px;
 
+	z-index: 3;
+	//margin-left: 100px;
+	//background-color: blue;
+	position: relative;
+	box-sizing: border-box;
+	//box-shadow: 0 0 5px black;
+	//border-bottom: 10px dotted green;
 	padding-top: 80px;
+	height: 45vw;
+	min-height: 414px;
+	max-height: 915px;
 	//padding: 23%;
 	//height: 1000px;
 	//background-image: url(../img/header_bg.png);
@@ -34,10 +49,8 @@ body{
 	margin-left: 14%;
 	margin-right: 14%;
 	z-index: 100;
-	border:2px dotted blue;
-	height: 35vw;
-	min-height: 322px;
-	max-height: 700px;
+	//border:2px dotted blue;
+
 }
 
 .header_bg_parent{
@@ -208,30 +221,116 @@ body{
 	display: grid;
 	grid-template-rows: 1fr 1fr 1fr;
 }
+
+
+
+
+
 .main_block{
-  z-index: -1;
-	margin: 300px 0 300px 0;
-	height: 950px;
-	border: 2px dotted green;
-	background: linear-gradient(to bottom, red,orange,yellow,green,blue,violet);
+	position: relative;
+  	z-index: 2;
+  	//margin-top: -13vw;
+	//margin: 300px 0 300px 0;
+	//margin-top: -14%;
+	//height: 1500px;
+	//border-top: 15px dotted green;
+	//background-color: green;
+	//margin-left: 250px;
+	//background: linear-gradient(to bottom, red,orange,yellow,green,blue,violet);
+}
+
+@media(min-width: 2000px){
+	.main_block{
+		margin-top:-280px;
+	}
+}
+
+@media (min-width: 921px) and (max-width: 1999px){
+	.main_block{
+		margin-top: -14vw;
+	}
+}
+
+@media(max-width: 920px){
+	.main_block{
+		margin-top:-129px;
+	}
+}
+
+.about{
+	//border-bottom: 10px dotted red;
+	//margin-bottom: 100px;
+	height: 50vw;
+	max-height: 1000px;
+	min-height: 460px; 
+}
+
+.about_content{
+
+}
+
+.about_bg{
+
+}
+
+.about_bg>img{
+	width: 100%;
 }
 
 .portfolio {
-  position: absolute;
+	//margin-top: -13%;
+	//border-bottom:10px dotted blue;
+  //position: absolute;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
-  background: url(../img/portfolio-bg.png) no-repeat;
-  background-size: 100%;
+  //background: url(../img/portfolio-bg.png) no-repeat;
+  //background-size: 100%;
   //bottom: 10px;
   //background-color: black;
   width:100%;
-  height: 980px;
+  height: 60vw;
+	max-height: 1230px;
+	min-height: 572px; 
   bottom: 190px;
-  z-index: 100;
+  //z-index: 100;
+}
+
+@media(min-width: 2000px){
+	.portfolio{
+		margin-top:-260px;
+	}
+}
+
+@media (min-width: 921px) and (max-width: 1999px){
+	.portfolio{
+		margin-top: -13vw;
+	}
+}
+
+@media(max-width: 920px){
+	.portfolio{
+		margin-top:-120px;
+	}
+}
+
+.portfolio_content{
+	margin-left: 14%;
+	margin-right: 14%;
+	margin-top: 150px;
+	position: absolute;
+	border: 5px dotted red;
+}
+
+.portfolio_bg{
+
+}
+
+.portfolio_bg>img{
+	width: 100%;
 }
 
 .portf_name {
-  position: absolute;
+  position: relative;
   top: 20%;
   left: 40%;
   font-size: 50px;
@@ -239,15 +338,15 @@ body{
 }
 
 .separ {
-  position: absolute;
+  position: relative;
   left: 45%;
   top: 28%;
 }
 
 .slider {
-  position: absolute;
+  position: relative;
   //background-color: black;
-  border: 2px dotted red;
+  //border: 2px dotted red;
   top: 31%;
   width: 100%;
   height: 430px;
@@ -276,7 +375,7 @@ i.fa {
   text-align: center;
   //margin-right: -26px;
   position: relative;
-  z-index: 1;
+  //z-index: 1;
   float: left;
 }
 
@@ -284,22 +383,69 @@ i.fa + input {
   padding-left: 26px;
 }
 
+
+
+
+
+
 .footer {
-  border: 2px dotted red;
-  //position: absolute;
-  left: 0;
-  bottom: 0;
-  background: url(../img/footer-bg.png) no-repeat;
-  background-size: cover;
-  height: 450px;
-  width: 100%;
+	//border: 2px solid red;
+	position: relative;
+	z-index: 1;
+  height: 55vw;
+  min-height: 506px;
+  max-height: 1100px;
+  //width: 80%;
+}
+
+@media(min-width: 2000px){
+	.footer{
+		margin-top:-660px;
+	}
+}
+
+@media (min-width: 921px) and (max-width: 1999px){
+	.footer{
+		margin-top: -33vw;
+	}
+}
+
+@media(max-width: 920px){
+	.footer{
+		margin-top:-303px;
+	}
+}
+
+
+.footer_bg{
+	//border: 2px dotted blue;
+	z-index: 1;
+	position: absolute;
+	bottom: 0;
+	//margin-bottom: -20px;
+}
+
+.footer_bg>img{
+	//border: 2px solid blue;
+	width: 100%;
+	position: relative;
+	vertical-align: bottom;
+	//bottom: 0;
+	//margin-bottom: 0;
 }
 
 .foot_cont {
+	width: 72%;
+	margin-left: 14%;
+	margin-right: 14%;
+	border: 5px dotted blue;
+	position: absolute;
+	z-index: 2;
   font-family: 'Open Sans', sans-serif;
   //position:absolute;
-  margin-left: 20%;
-  margin-top: 12%;
+  //width: 100%;
+  //margin-left: 20%;
+  margin-top: 33%;
 }
 
 .f_cat {
@@ -362,3 +508,4 @@ i.fa + input {
 	margin-right: 21%;
 	//padding-left: auto;
 }
+*/
